fix: overflow

--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ header {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     margin: auto;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 header h1 {
@@ -210,6 +210,15 @@ header h3 {
     align-items: center;
     padding: 0 4rem;
     flex-grow: 1;
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 640px) {
+    margin-top: 2rem;
 }
 
 @media (min-width: 1024px) {
